# line_segmentation_app

./: .gitignore  README.md  create_samples.py  main.py  pyproject.toml
