[project]
name = "line-segmentation-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "onnxruntime>=1.22.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pymupdf>=1.26.3",
    "ruff>=0.12.7",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
