[project]
name = "line-segmentation-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "onnxruntime>=1.22.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pymupdf>=1.26.3",
    "ruff>=0.12.7",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
