[project]
name = "line-segmentation-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "torch>=1.10.0",
    "torchvision>=0.11.0",
    "scipy>=1.10.1",
    "scikit-image>=0.21.0",
    "shapely>=2.0.2",
    "pyclipper>=1.3.0",
    "tqdm>=4.64.0",
    "einops>=0.6.1",
    "timm>=0.9.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pymupdf>=1.26.3",
    "ruff>=0.12.7",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
